<resources>
    <string name="app_name" translatable="false">AnimalApp</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_date">Birthdate</string>
    <string name="tax_id">Tax id code</string>
    <string name="location_address">Address</string>
    <string name="email_address">Email address</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="register_underlined"><u>Register</u></string>
    <string name="login">login</string>
    <string name="have_account_yet">"Don't have an account yet? "</string>
    <string name="company_name">Company name</string>
    <string name="site">Site</string>
    <string name="phone_number">Phone number</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="public_authority">Public Authority</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="visit_date">Visit date</string>
    <string name="medical_note">Medical note</string>
    <string name="doctor_name">Doctor name</string>
    <string name="save">Save</string>
    <string name="edit_visit">EDIT VISIT</string>
    <string name="create_visit">CREATE VISIT</string>
    <string name="create">Create</string>
    <string name="create_relation">CREATE RELATION</string>
    <string name="create_expense">CREATE EXPENSE</string>
    <string name="expense">Expense</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="share_position">Share position</string>
    <string name="add_animal">ADD ANIMAL</string>
    <string name="add">ADD</string>
    <string name="age">Age</string>
    <string name="report_age">Age (Optional)</string>
    <string name="microchip">Microchip</string>
    <string name="edit_animal">EDIT ANIMAL</string>
    <string name="add_pathology">ADD PATHOLOGY</string>
    <string name="add_food">ADD FOOD</string>
    <string name="delete">Delete</string>
    <string name="open_animal_profile">Animal Profile</string>
    <string name="add_report">ADD REPORT</string>
    <string name="edit_report">EDIT REPORT</string>
    <string name="add_request">ADD REQUEST</string>
    <string name="edit_request">EDIT REQUEST</string>
    <string name="beds">Beds</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="confirm_delete">CONFIRM DELETE</string>
    <string name="this_element_will_be">This element will be deleted definitely</string>
    <string name="cancel">Cancel</string>
    <string name="year">Year</string>
    <string name="years">Years</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="week">Week</string>
    <string name="weeks">Weeks</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="ago">ago</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="now">Now</string>
    <string name="born_today">born today!</string>
    <string name="invalid_user_name">Invalid name. Only characters</string>
    <string name="invalid_microchip">Invalid microchip. Length required 15</string>
    <string name="microchip_already_exist">Microchip already exist</string>
    <string name="invalid_user_surname">Invalid surname. Only characters</string>
    <string name="invalid_user_birthdate">Invalid date of birth</string>
    <string name="invalid_user_email">Invalid email</string>
    <string name="already_used_email">This email is already used.</string>
    <string name="invalid_user_password">Invalid password. Minimum 6 characters</string>
    <string name="invalid_user_location">Invalid address</string>
    <string name="login_error">Access error</string>
    <string name="profile_update_successful">Profile successfully updated</string>
    <string name="profile_update_error">Profile update error</string>
    <string name="invalid_user_phonenumber" translatable="false">Invalid Phone Number. Only numbers</string>
    <string name="invalid_user_companyname" translatable="false">Invalid name. Minimum 4 characters. Only characters</string>
    <string name="book_visit">Book visit</string>
    <string name="owner">Owner</string>
    <string name="profile_delete_alert_title">Account deletion</string>
    <string name="profile_delete_alert_mex1">Are you sure you want to delete the account?</string>
    <string name="confirm">CONFIRM</string>
    <string name="profile_delete_alert_cancel">Cancel</string>
    <string name="profile_delete_successful">Account successfully deleted</string>
    <string name="profile_delete_failed">"Account deletion error"</string>
    <string name="photo_update_failed">"Photo update error"</string>
    <string name="warning">WARNING</string>
    <string name="info">INFO</string>
    <string name="change_owner_warning">Confirming you will transfer the animal to</string>
    <string name="delete_animal_warning">This animal will be definitely cancelled</string>
    <string name="delete_report_warning">Do you want to delete the report?</string>
    <string name="delete_request_warning">Do you want to delete the request?</string>
    <string name="right_owner_advice">Be sure to select a valid owner!</string>
    <string name="invalid_report_description">"Enter a valid description"</string>
    <string name="report_name">Name (Optional)</string>
    <string name="report_create_successful">Report successfully created</string>
    <string name="request_create_successful">Request successfully created</string>
    <string name="report_update_successful">Report successfully updated</string>
    <string name="request_update_successful">Request successfully updated</string>
    <string name="report_delete_successful">Report successfully deleted</string>
    <string name="request_delete_successful">Request successfully deleted</string>
    <string name="report_create_error">Error. Report not created</string>
    <string name="request_create_error">Error. Request not created</string>
    <string name="report_update_error">Error. Report not updated</string>
    <string name="request_update_error">Error. Request not updated</string>
    <string name="report_delete_error">Error. Report not deleted</string>
    <string name="request_delete_error">Error. Request not deleted</string>
    <string name="request_location_subject">Location of request</string>
    <string name="report_location_subject">Location of report</string>
    <string name="location_chooser_title">Share via</string>
    <string name="report_animal_profile">Share animal profile</string>
    <string name="report_location_update">Update position with current position</string>
    <string name="invalid_report_select_lost_option_1">You must be logged in to select this option</string>
    <string name="invalid_report_select_lost_option_2">You must own at least one animal to select this option</string>
    <string name="invalid_report_age_1">The date must consist of two parts; Example: "3 Months"</string>
    <string name="invalid_report_age_2">The first part of the date must be a number</string>
    <string name="invalid_report_age_3">The second part of the date must be a word: day(s), month(s), year(s)</string>
    <string name="invalid_report_selected_animal">Select an animal from your animal list</string>
    <string name="invalid_request_description">"Enter a valid description"</string>
    <string name="invalid_request_beds">"Enter a valid number of available beds"</string>
    <string name="dog_species_name">Dog</string>
    <string name="cat_species_name">Cat</string>
    <string name="fish_species_name">Fish</string>
    <string name="bird_species_name">Bird</string>
    <string name="rabbit_species_name">Rabbit</string>
    <string name="find_animal_request_name">FIND ANIMAL</string>
    <string name="offer_animal_request_name">OFFER ANIMAL</string>
    <string name="offer_beds_request_name">OFFER BEDS</string>
    <string name="find_animal_report_name">FOUND</string>
    <string name="lost_animal_report_name">LOST</string>
    <string name="danger_animal_report_name">ENDANGERED</string>
    <string name="user_not_logged_report">Anonymous user</string>
    <string name="animal_name_unknown_report">Unknown name</string>
    <string name="description_offer_beds_request">Available beds: </string>
    <string name="permission_explanation_dialog_grant">Grant</string>
    <string name="permission_explanation_dialog_cancel">Cancel</string>
    <string name="permission_location_explanation_title">Permission needed</string>
    <string name="permission_location_explanation_description_for_create_report">To continue, permission must be granted to access the position</string>
    <string name="permission_location_not_granted_description_for_create_report">You cannot use this functionality because you have not granted localization permission</string>
    <string name="permission_location_explanation_description_for_distance_report">To display the distance between you and the reports/requests, you must grant permission to access the location</string>
    <string name="permission_location_not_granted_description_for_distance_report">It is not possible to display the distance because location authorisation has not been granted</string>
    <string name="permission_location_explanation_description_for_distance_pub_vet">To display the distance between you and the public authorities/veterinarians, you must grant permission to access the location</string>
    <string name="permission_location_not_granted_description_for_distance_pub_vet">It is not possible to display the distance because location authorisation has not been granted</string>
    <string name="location_not_available">Your position is currently not available</string>
    <string name="location_gps_disabled_message_for_create_report">To create report, GPS must be activated. Do you want to activate it?</string>
    <string name="location_gps_disabled_message_for_distance_report">To display the distance between you and the reports/requests, GPS must be activated. Do you want to activate it?</string>
    <string name="location_gps_disabled_message_for_distance_pub_vet">To display the distance between you and the public authorities/veterinarians, GPS must be activated. Do you want to activate it?</string>
    <string name="settings">Settings</string>
    <string name="location_gps_disabled_cancel">Cancel</string>
    <string name="invalid_video">max video duration allowed is 20s</string>
    <string name="animal">Animal</string>
    <string name="visit">Visit</string>
    <string name="confirm_logout">You are quitting from this account</string>
    <string name="welcome">Welcome</string>
    <string name="close">Close</string>
    <string-array name="diagnosis_type">
        <item>Positive</item>
        <item>Negative</item>
        <item>None</item>
    </string-array>
    <string-array name="visit_state">
        <item>Executed</item>
        <item>Not executed</item>
        <item>To be reviewed</item>
    </string-array>
    <string-array name="exam_type">
        <item>DEWORMING</item>
        <item>VACCINATION</item>
        <item>STERILIZATION</item>
        <item>SURGERY</item>
        <item>CONTROL</item>
    </string-array>
    <string-array name="animal_species">
        <item>Dog</item>
        <item>Cat</item>
        <item>Fish</item>
        <item>Bird</item>
        <item>Rabbit</item>
    </string-array>
</resources>