<?xml version="1.0" encoding="utf-8"?>
    <!-- Sfondo blu -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <!--RelativeLayout is used to center all the child-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp">

        <!--ScrollView is used for portrait mode-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/ic_launcher_background" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColorHint="#A3A3A3"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/surnameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColorHint="#A3A3A3"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_shape"
                        android:hint="@string/birth_date"
                        android:padding="16dp"
                        android:textColorHint="#CCCCCC"
                        android:textSize="16sp" />

                    <ImageButton
                        android:layout_width="100dp"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:src="@drawable/calendar_icon"
                        app:tint="@color/white" />
                </LinearLayout>

                <EditText
                    android:id="@+id/tax_id_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/tax_id"
                    android:inputType="textCapCharacters"
                    android:padding="16dp"
                    android:textColorHint="#A3A3A3"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColorHint="#A3A3A3"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColorHint="#A3A3A3"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="254dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_shape"
                    android:paddingHorizontal="10dp"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
