<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_rounded_container_shape"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_rounded_container_shape"
        android:backgroundTint="?attr/colorAccent"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="15dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="25dp"
            android:textColor="?attr/colorPrimary"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edged_container_shape"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_centerInParent="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="26dp">
                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/profile_image"
                    android:layout_centerHorizontal="true" />
                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_shape"
                    android:paddingHorizontal="10dp"
                    android:text="@string/edit"
                    android:textColor="?attr/colorPrimary"
                    android:layout_centerInParent="true"
                    android:textSize="10sp" />
            </RelativeLayout>

            <it.uniba.dib.sms222334.Views.AnimalAppEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/company_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="#A3A3A3"
                android:textSize="16sp" />

            <it.uniba.dib.sms222334.Views.AnimalAppEditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/site"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="#A3A3A3"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/phone_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/prefix_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/check_button_shape"
                    android:textSize="16sp" />

                <it.uniba.dib.sms222334.Views.AnimalAppEditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="16dp"
                    android:textColorHint="#A3A3A3"
                    android:textSize="16sp" />
            </LinearLayout>

            <it.uniba.dib.sms222334.Views.AnimalAppEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColorHint="#A3A3A3"
                android:textSize="16sp" />

            <it.uniba.dib.sms222334.Views.AnimalAppEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="#A3A3A3"
                android:textSize="16sp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_shape"
                android:paddingHorizontal="10dp"
                android:text="@string/edit"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>