<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_rounded_container_shape"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_rounded_container_shape"
        android:backgroundTint="?attr/colorAccent"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="15dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_visit"
            android:textSize="25dp"
            android:textColor="?attr/colorPrimary"
            android:layout_centerInParent="true"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:layout_centerInParent="true">

        <Spinner
            android:id="@+id/visit_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/check_button_shape"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/animal_chooser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/check_button_shape"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/visit_date"
                android:padding="16dp"
                android:textColorHint="#bbbbbb"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/date_picker_button"
                android:layout_width="100dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:src="@drawable/calendar_icon"
                app:tint="?attr/colorPrimary" />
        </LinearLayout>

        <it.uniba.dib.sms222334.Views.AnimalAppEditText
            android:id="@+id/doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/name"
            android:padding="16dp"
            android:textColorHint="#A3A3A3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_shape"
            android:paddingHorizontal="10dp"
            android:text="@string/create"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>